--- a/kosik.html
+++ b/kosik.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html" class="menu-2">DOMŮ</a> </li>¨
+            <li><a href="index.ejs" class="menu-2">DOMŮ</a> </li>¨
             <li><a href="kosik.html" class="menu-2">KOŠÍK</a> </li>
         </ul>
     </nav>
