--- a/kosik.html
+++ b/kosik.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="kosik.css">
 </head>
+
 <body>
     <nav>
         <ul>
-            <li><a href="index.ejs" class="menu-2">DOMŮ</a> </li>¨
+            <li><a href="index.ejs" class="menu-2">DOMŮ</a> </li>
             <li><a href="kosik.html" class="menu-2">KOŠÍK</a> </li>
         </ul>
     </nav>
+    <h2>Košík</h2>
+    <button id="vymazat">Vymazat košík</button>
 </body>
+
 </html>
